--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  dropdown_search: ^0.4.4
+  email_validator: '^1.0.0'
   provider:
-  uuid: 2.2.2
   fluro:
    git: git://github.com/theyakka/fluro.git
   flutter:
@@ -51,7 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - estados-cidades.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
